# k4Pandora

./: CMakeLists.txt  README.md
Examples/: CMakeLists.txt
Examples/options/: tut_detsim_pandora.py  tut_pandora.py
Examples/src/Edm4hepTest/: Edm4hepReadAlg.cpp  Edm4hepReadAlg.h  Edm4hepWriteAlg.h
Pandora/: CMakeLists.txt
Pandora/GaudiPandora/: CMakeLists.txt
Pandora/GaudiPandora/include/: PandoraPFAlg.h
Pandora/GaudiPandora/src/: PandoraPFAlg.cpp  TrackCreator.cpp
Pandora/k4GaudiPandora/: CMakeLists.txt
Pandora/k4GaudiPandora/include/: PfoCreator.h
Pandora/k4GaudiPandora/src/: PandoraPFAlg.cpp  TrackCreator.cpp
cmake/: k4PandoraConfig.cmake
